# jobtracker

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml
collectors/: Dockerfile  hiringcafe.py
deploy/: cnpg-cluster.yaml  cronjob-collector-hiringcafe.yaml  deployment-worker.yaml  deployment.yaml  external-secret-app.yaml  external-secret-b2.yaml  external-secret-pg.yaml  ingress.yaml  kustomization.yaml  objectstore-b2.yaml  service.yaml
migrations/: 001_initial.sql  002_cascade_deletes.sql  003_collector_runs.sql  004_upsert_and_indexes.sql
src/: auth.rs  config.rs  db.rs  error.rs  main.rs
src/collectors/: hiringcafe.rs  mod.rs  runner.rs
src/models/: application.rs  collector.rs  collector_run.rs  company.rs  event.rs  job.rs  mod.rs
src/routes/api/: applications.rs  collect.rs  collectors.rs  companies.rs  events.rs  jobs.rs  mod.rs  tokens.rs
src/routes/ui/: admin.rs  applications.rs  dashboard.rs  jobs.rs  mod.rs
templates/: base.html  dashboard.html
templates/admin/: index.html
templates/applications/: detail.html  list.html
templates/jobs/: detail.html  list.html
templates/partials/: timeline.html
