[package]
name = "jobtracker"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Self-hosted job application tracker portal"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate"] }

# Templates
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for collectors)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
percent-encoding = "2.3"

# Auth
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config and CLI
clap = { version = "4", features = ["derive", "env"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }


[profile.release]
lto = true
strip = true
codegen-units = 1
